--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="stylesheet.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Press+Start+2P&family=VT323&family=Righteous&family=Rajdhani:wght@500&display=swap"
       rel="stylesheet"
@@ -195,9 +192,34 @@
           </ul>
         </div>
       </section>
+      <footer class="social-footer">
+       
+      </footer>   
+   
     </div>
-
-    <footer><div class="cassette-header"></div></footer>
+    <div class="cassette-side-b">
+    <div class="side-b-wrapper">
+      <div class="meet-the-artist">
+        <div class="artist-show-name">ELCY</div>
+        <div class="artist-real-name">LOGAN</div>
+        <div class="about-the-artist">
+        <div class="artist-about"></div>
+      </div>
+      </div>
+    </div>
+  </div>
+    
     <script src="index.js"></script>
   </body>
 </html>
+
+
+<!-- Social icons 
+<i class="fab fa-spotify"></i>
+<i class="fab fa-apple"></i>
+<i class="fab fa-soundcloud"></i>
+<i class="fab fa-x-twitter"></i>
+<i class="fab fa-youtube"></i>
+<i class="fab fa-instagram"></i>
+<i class="fab fa-tiktok"></i>
+-->
