--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         <div id="opener-text" class="flash-animation">CLICK TO INSERT TAPE</div>
       </div>
     </div>
+    <div class="flip-container">
+    <div class="flip-inner">
+    <div id="cassette-side-a" class='cassette-side side-a'>
+    <div id="cassette-wrapper">
+    </div>
     <header class="cassette-header">
       <div class="label-tag">SIDE A</div>
       <h1 class="artist-name">ELCY</h1>
@@ -192,12 +197,12 @@
           </ul>
         </div>
       </section>
-      <footer class="social-footer">
-       
+      <footer class="page-footer">
+        <div id="flip-tape-button">CLICK TO FLIP TAPE</div>
       </footer>   
-   
     </div>
-    <div class="cassette-side-b">
+    </div>
+    <div id="cassette-side-b" class="cassette-side side-b hidden">
     <div class="side-b-wrapper">
       <div class="meet-the-artist">
         <div class="artist-show-name">ELCY</div>
@@ -208,7 +213,8 @@
       </div>
     </div>
   </div>
-    
+</div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
