--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
       </div>
     </div>
     <div class="main-container">
+      <div class="scroll-cue" id="scroll-arrows">
+        <span>&#x25BC;</span>
+        <span>&#x25BC;</span>
+      </div>
     <div class="flip-container">
     <div class="flip-inner">
     <div id="cassette-side-a" class='cassette-side side-a side'>
@@ -45,6 +49,8 @@
 
     <div class="content-wrapper">
       <section id="image-carousel">
+        <h1 style="text-align: center;">TRACK SELECTOR</h1>
+        <hr>
         <div class="image-track">
           <ul class="image-list">
             <li class="image-slide">
@@ -199,6 +205,7 @@
             </li>
           </ul>
         </div>
+        <hr>
       </section> 
     </div>
     </div>
@@ -223,20 +230,21 @@
         <h2 class="artist-show-name">ELCY</h2>
         <p class="artist-about-text">Emerging from the underground scene with a sound that blends nostalgic textures and modern rhythms, [Artist Name] is a genre-defying musician crafting immersive sonic experiences. With roots in lo-fi, synthwave, and alternative hip-hop, their tracks channel the warmth of analog tape and the grit of late-night city drives. Drawing inspiration from personal stories, cassette-era vibes, and a relentless DIY ethic, [Artist Name] invites listeners into a world where every beat tells a story, and every lyric echoes with intention. Stay tuned</p>
       </div>
+   
       </div>
-      <div class="social-bar">
-        <i class="fab fa-spotify"></i>
-        <i class="fab fa-apple"></i>
-        <i class="fab fa-soundcloud"></i>
-        <i class="fab fa-x-twitter"></i>
-        <i class="fab fa-youtube"></i>
-        <i class="fab fa-instagram"></i>
-        <i class="fab fa-tiktok"></i>
-      </div>
+  
     </div>
     </div>
   </section>
-    
+  <div class="social-bar">
+    <i class="fab fa-spotify"></i>
+    <i class="fab fa-apple"></i>
+    <i class="fab fa-soundcloud"></i>
+    <i class="fab fa-x-twitter"></i>
+    <i class="fab fa-youtube"></i>
+    <i class="fab fa-instagram"></i>
+    <i class="fab fa-tiktok"></i>
+  </div>
   </div>  
   </div>
   
