--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="content-wrapper">
       <section id="image-carousel">
         <h1 style="text-align: center;">TRACK SELECTOR</h1>
-        <hr>
+        <hr class="front-hr">
         <div class="image-track">
           <ul class="image-list">
             <li class="image-slide">
@@ -205,7 +205,7 @@
             </li>
           </ul>
         </div>
-        <hr>
+        <hr class="front-hr">
       </section> 
     </div>
     </div>
@@ -220,7 +220,7 @@
       <section>
         <div class="header-text">
         <h1 class="meet-header">MEET THE ARTIST</h1>
-        <hr>
+        <hr class="back-hr">
       </div>
       <div class="artist-content">
         <div class="artist-header">
