Side A Fits Mobile v1

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <hr class="front-hr">
         <div class="image-track">
           <ul class="image-list">
+            <li class="image-slide dummy"></li>
             <li class="image-slide">
               <div class="center-panel">
                 <div class="panel-head">
@@ -203,11 +204,15 @@
                 </div>
               </div>
             </li>
+            <li class="image-slide dummy"></li>
           </ul>
         </div>
         <hr class="front-hr">
       </section> 
     </div>
+    <footer class="page-footer" id="footer-a">
+      <div id="flip-a">CLICK TO FLIP TAPE</div>
+    </footer>
     </div>
     <div id="cassette-side-b" class="cassette-side side-b side">
       <header class="cassette-header">
@@ -250,8 +255,8 @@
   
 </div>
     </div>
-    <footer class="page-footer">
-        <div id="flip-tape-button">CLICK TO FLIP TAPE</div>
+    <footer class="page-footer" id="footer-b">
+        <div id="flip-b">CLICK TO FLIP TAPE</div>
       </footer>
       </div>
     <script src="index.js"></script>
